# ark_ts2abc

./: OAT.xml  README.md  README_zh.md  bundle.json
es2panda/: CMakeLists.txt  es2panda.cpp  es2panda.h
es2panda/aot/: main.cpp  options.cpp  options.h
es2panda/binder/: binder.cpp  binder.h  declaration.h  scope.cpp  scope.h  tsBinding.h  variable.cpp  variable.h  variableFlags.h
es2panda/compiler/base/: condition.cpp  destructuring.cpp  hoisting.cpp  iterators.cpp  iterators.h  lexenv.cpp  literals.h  lreference.cpp
es2panda/compiler/core/: compileQueue.cpp  compileQueue.h  compilerContext.cpp  compilerContext.h  compilerImpl.cpp  compilerImpl.h  dynamicContext.cpp  dynamicContext.h  emitter.cpp  emitter.h  envScope.cpp  envScope.h  function.cpp  labelTarget.h  moduleContext.cpp  moduleContext.h  pandagen.cpp  pandagen.h  regAllocator.cpp  regAllocator.h  regScope.cpp
es2panda/compiler/debugger/: debuginfoDumper.cpp
es2panda/compiler/function/: asyncFunctionBuilder.cpp  asyncFunctionBuilder.h  asyncGeneratorFunctionBuilder.cpp  asyncGeneratorFunctionBuilder.h  functionBuilder.cpp  functionBuilder.h  (+2 more)
es2panda/ir/: astDump.cpp  astDump.h  astNode.h  astNodeMapping.h  expression.h  irnode.h
es2panda/lexer/: keywordsUtil.cpp  lexer.cpp  lexer.h
es2panda/parser/: expressionParser.cpp  parserFlags.h  parserImpl.cpp  parserImpl.h  statementParser.cpp
es2panda/test/: runner.py
es2panda/typescript/: checker.cpp  checker.h
es2panda/util/: bitset.h  enumbitops.h  helpers.cpp  helpers.h  ustring.cpp  ustring.h
local_test/: buffer.txt  constructor.txt  out_full_standartd.txt  test.abc  test.ts  test_after.txt  test_before.txt  test_c.abc  test_c.ts  test_classExpression.abc  test_classExpression.ts  test_engine.abc  test_engine.ts  test_full.abc  test_full.ts  test_full_alt.ts  test_full_non-type.abc  test_primi.abc  test_primi.ts
local_test/import_test/: .out.txt.swp  out.txt  package.json  test_another_export.abc  test_another_export.ts  test_another_simpler_export.abc  test_another_simpler_export.ts  test_export.abc  test_export.ts  test_import.abc  test_import.ts  test_simpler_export.abc  test_simpler_export.ts
local_test/test_try/: export.abc  export.ts  import.ts
patches/DebugInfo/: runtime.patch  ts2abc.patch
patches/ModulesSupport/: ESM.patch
test262/: README.md  babel-preprocessor.js  config.py  es2015_tests.txt  es2021_tests.txt  es5_tests.txt  run_sunspider.py  run_test262.py  skip_tests.json  utils.py
testTs/: README.md  README_zh.md  config.py  import_tests.json  run_testTs.py  skip_tests.json  test-case.patch  utils.py
test_ecma_bcopt/: test_bytecode_optimizer_for_js.js  test_bytecode_optimizer_for_js.txt
ts2panda/: BUILD.gn  package-lock.json  package.json  ts2abc_config.gni  tsconfig.json  webpack.config.js
ts2panda/scripts/: diagnosticMessages.json  generate_js_bytecode.py  generate_plugin.py  npm-install.sh  run.py  run_tests.py
ts2panda/src/: addVariable2Scope.ts  assemblyDumper.ts  cmdOptions.ts  compiler.ts  compilerDriver.ts  compilerStatistics.ts  compilerUtils.ts  debuginfo.ts  ecmaModule.ts  hoisting.ts  index.ts  jshelpers.d.ts  lexenv.ts  modules.ts  pandagen.ts  pandasm.ts  recorder.ts  regAllocator.ts  scope.ts  strictMode.ts  syntaxCheckHelper.ts  syntaxChecker.ts  syntaxCheckerForStrcitMode.ts  ts2panda.ts  typeChecker.ts  typeRecorder.ts  variable.ts
ts2panda/src/base/: bcGenUtil.ts  builtIn.ts  lexEnv.ts  literal.ts  typeSystem.ts  util.ts  vregisterCache.ts
ts2panda/src/expression/: bigIntLiteral.ts  callExpression.ts  memberAccessExpression.ts  metaProperty.ts
ts2panda/src/function/: asyncFunctionBuilder.ts  functionBuilder.ts  generatorFunctionBuilder.ts
ts2panda/src/pass/: cacheExpander.ts
ts2panda/src/statement/: classStatement.ts  forOfStatement.ts  labelTarget.ts  loopStatement.ts  returnStatement.ts  switchStatement.ts  tryStatement.ts
ts2panda/templates/: diagnostic.ts.erb  irnodes.ts.erb
ts2panda/tests/: BUILD.gn  commonjs.test.ts  hoist.test.ts  lexenv.test.ts  regAllocator.test.ts  scope.test.ts
ts2panda/tests/expression/: arguments.test.ts  binary.test.ts  call.test.ts  cmpBinary.test.ts  commalist.test.ts  conditions.test.ts  delete.test.ts  elementAccess.test.ts  functionExpression.test.ts  literal.test.ts  logicBinary.test.ts  new.test.ts  numericLiteral.test.ts  operationEqual.test.ts  postfixOperations.test.ts  prefixOperations.test.ts  propertyAccess.test.ts  regular.test.js  templateExpression.test.ts  typeOf.test.ts
ts2panda/tests/statements/: doWhile.test.ts  for.test.ts  forOf.test.ts  functionDeclaration.test.ts  switch.test.ts  tryCatch.test.ts  variableDeclaration.test.ts  while.test.ts
ts2panda/tests/types/: array.test.ts  class.test.ts  function.test.ts  object.test.ts  primitives.test.ts  typeUtils.ts  union.test.ts
ts2panda/tests/types/array/: array_object.ts  array_primitives.ts  array_union.ts
ts2panda/tests/types/class/: class_abstract.ts  class_constr_no_para.ts  class_constr_para.ts  class_fields.ts  class_implements.ts  class_methods.ts  class_static_fields.ts  class_static_methods.ts
ts2panda/tests/types/function/: function_class_para.ts  function_class_return.ts  function_multi_para.ts  function_no_para.ts  function_same_para_and_return.ts
ts2panda/tests/types/object/: object_class.ts  object_primi.ts
ts2panda/tests/types/primitives/: primitives_in_block.ts  primitives_in_class.ts  primitives_in_for.ts  primitives_in_function.ts  primitives_in_if.ts  primitives_no_type_annotation.ts  primitives_only_type_annotation.ts
ts2panda/tests/types/union/: union_multi_same_primi.ts  union_multi_userDefinedType.ts  union_primitives.ts  union_userDefinedType.ts
ts2panda/tests/utils/: base.ts
ts2panda/tests/watch_expression/: addWatch.test.ts
ts2panda/ts2abc/: BUILD.gn  main.cpp  ts2abc.cpp  ts2abc.h  ts2abc_options.h  type_adapter.cpp  type_adapter.h
ts2panda/ts2abc/tests/: BUILD.gn  debuglog_test.cpp  debugmode_test.cpp  functions_test.cpp  stringarr_test.cpp
ts2panda/ts2abc/tests/type_adapter_test/: BUILD.gn  type_adapter_test.cpp
(+1290 files in other folders)
